# slack-com-graph

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: reaction_clustering.ipynb  visualize_yfiles.ipynb
scripts/: generate_test_data.py  history_capture.js  slack_capture.js
src/slack_graph/: __init__.py  cli.py  config.py  export.py  graph.py  import_ndjson.py  import_users.py  ingest.py  models.py  storage.py
src/slack_graph/clustering/: __init__.py  cluster.py  features.py
